--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,6 @@
 }
 
 html {
-  scroll-behavior: smooth;
   cursor: none;
   background-color: var(--bg);
 }
@@ -87,4 +86,6 @@ h5 {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='300' height='300'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.7' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='300' height='300' filter='url(%23n)'/%3E%3C/svg%3E");
   background-size: 300px 300px;
   z-index: 0;
+  transform: translateZ(0);
+  will-change: transform;
 }
