fix: make it responsive2 add space

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,12 +23,17 @@
 html {
   cursor: none;
   background-color: var(--bg);
-  scroll-snap-type: y mandatory;
 }
 
-section,
-footer {
-  scroll-snap-align: start;
+@media (min-width: 768px) {
+  html {
+    scroll-snap-type: y mandatory;
+  }
+
+  section,
+  footer {
+    scroll-snap-align: start;
+  }
 }
 
 body {
